# countingsort_mpi

./: CMakeLists.txt  Doxyfile
include/: counting_sort.h  counting_sort_mpi.h  util.h
script/: extract_measures.py  measures.bash
source/: counting_sort.c  counting_sort_mpi.c  generate.c  main_generate.c  main_leggi.c  main_measures.c  main_measures_sequential.c  read_file.c  util.c
test/: counting_sort_test.c
